
# Changes

## 20200414

* werkt al goed

## 20200507

- nieuwe parameters in teamsync.ini : maakklassenteams, maaklesgroepenteams, maakvakkenteams
- rare voorwaarde docenten klas > "4" verwijderd
- nieuwe filters voor excl_klas, excl_docent
- betere detectie voor actieve teams, actieve docenten
- schermuitvoer verfraaid
- variabele 'vaktotaal' hernoemd naar 'ruwegroepen'

## 20200621

* Herschreven en opgesplitst in drie modules (ophalen, transformeren, wegschrijven) in twee afzonderlijke scripts:
** `Ophalen-MagisterData.ps1`: ophalen
** `Transformeren-Naar-SchoolDataSync.ps1`: transformeren, wegschrijven
* Progressiebalken lagere updatefrequentie,
* Uitvoerlijsten worden gesorteerd.
* Dubbele docenten in teams worden voorkomen.
* Bestandsnaam van INI-file kan op commandoregel worden gespecifieerd met parameter -inifile <filename>, bij verstek 'teamsync.ini'. 
* datamappen kunnen worden gespecificeerd in Ini-bestand

## 20200623
* Pad naar leerling.csv ontbrak
* Scriptnaam in venstertitel
* Volledige vakomschrijving toegevoegd aan teamnaam
* Alle schermuitvoer wordt gelogd.

## 20200629 
* Vakomschrijvingen worden gekapitaliseerd. 
* Vakomschrijvingen toegevoegd aan teamnaam waar dit herkend wordt in lesgroep of klas-vak-groep.
* Mogelijkheid voor insluitend filteren op locatie toegevoegd
* Ondersteuning voor gevallen waar Magister zonder SSO wordt gebruikt. Als schakelaar UseEmail=1, dan leest het veld "Id" gevuld uit AD-userobject attribuut UserPrincipalName in Active Directory, door AD user-attribuut employeeId te matchen aan Magister stamnummer

## TO DO

* Filter op locatie ('Administratieveeenheid.Omschrijving').